--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,11 +1,11 @@
 :root{
     --branding-color:#6C63FF;
-    --secondary-color: ##F9F7FE;
+    --secondary-color: #F9F7FE;
     --heading-font-family: 'Playfair Display', serif;
     --defoult-font-family: 'Poppins', sans-serif;
 }
 body{
-    font-family: var(--heading-font-family);
+    font-family: var(--defoult-font-family);
 }
 h1, h2, h3, h4{
     font-family: var(--heading-font-family);
@@ -13,15 +13,22 @@ h1, h2, h3, h4{
 }
 h1{
     font-size: 98px;
+    line-height: 1.5;
+}
+h2{
+    font-size: 64px;
 }
 p{
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
 }
 
 .hero{
     background-color: var(--secondary-color);
     text-align: center;
     padding: 160px 20px;
+    margin: 0;
 }
 .hero p{
     font-size: 36px;
@@ -33,7 +40,7 @@ p{
     font-family: var(--defoult-font-family);
     font-weight: normal;
     font-size: 24px;
-    line-height: 2;
+    line-height: 1.5;
 }
 .btn-branding{
     color: white;
@@ -42,4 +49,30 @@ p{
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
+}
+.btn-branding-outline{
+    color: var(--branding-color);
+    border: solid 1px var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
+.project-description{
+    padding: 120px 60px;
+}
+@media (max-width:992px) {
+    .hero{
+        padding: 80px 20px;
+    }
+    .project-description{
+        padding: 0;
+        text-align: center;
+    }
+    h1{
+        font-size: 56px;
+    }
+    h2{
+        font-size: 42px;
+    }
 }
