--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,6 +30,12 @@ p{
     padding: 160px 20px;
     margin: 0;
 }
+.about-section{
+    padding: 160px 20px;
+}
+.about-section-content{
+    margin: 30px;
+}
 .hero p{
     font-size: 36px;
     font-weight: bold;
@@ -41,6 +47,14 @@ p{
     font-weight: normal;
     font-size: 24px;
     line-height: 1.5;
+}
+.about-section h1{
+    font-size: 64px;
+    line-height: 80px;
+}
+.about-section h2{
+    font-size: 18px;
+    font-family: var(--defoult-font-family);
 }
 .btn-branding{
     color: white;
@@ -70,9 +84,15 @@ p{
         text-align: center;
     }
     h1{
-        font-size: 56px;
+        font-size: 48px;
+        line-height: 56px;
     }
     h2{
         font-size: 42px;
+    
+    }
+    .about-section{
+        padding: 0;
+        text-align: center;
     }
 }
