--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,11 +27,11 @@ p{
 .hero{
     background-color: var(--secondary-color);
     text-align: center;
-    padding: 160px 20px;
+    padding: 100px 20px;
     margin: 0;
 }
 .content-container{
-    padding: 160px 20px;
+    padding: 60px 20px;
 }
 .content{
     margin: 30px;
@@ -82,6 +82,16 @@ p{
 }
 .project-description{
     padding: 120px 60px;
+}
+.logo{
+    max-width: 100px;
+}
+.active{
+    color: var(--branding-color) !important;
+}
+.nav-item{
+    padding: 15px;
+    line-height: 14px;
 }
 @media (max-width:992px) {
     .hero{
