--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,9 @@ h1{
 h2{
     font-size: 64px;
 }
+h4{
+    font-size: 48px;
+}
 p{
     font-weight: normal;
     font-size: 16px;
@@ -93,6 +96,38 @@ p{
     padding: 15px;
     line-height: 14px;
 }
+footer{
+    margin: 60px 0;
+}
+footer .contact-box{
+    background-color: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box p{
+    margin: 0;
+}
+footer .email-link{
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+footer .email-link:hover{
+    color: var(--branding-color);
+}
+footer .social-link a{
+    margin: 0 20px;
+    color: var(--branding-color);
+    background-color: var(--secondary-color);
+    font-size: 18px;
+    padding: 10px 14px;
+    border-radius: 50%;
+}
+footer .social-link a:hover{
+    color: white;
+    background-color: var(--branding-color);
+}
+
 @media (max-width:992px) {
     .hero{
         padding: 80px 20px;
@@ -107,10 +142,13 @@ p{
     }
     h2{
         font-size: 42px;
-    
+    }
+    h4{
+        font-size: 18px;
     }
     .content-container{
         padding: 0;
         text-align: center;
     }
+    
 }
