--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,14 +12,14 @@ h1, h2, h3, h4{
     font-weight: bold;
 }
 h1{
-    font-size: 98px;
+    font-size: 90px;
     line-height: 1.5;
 }
 h2{
-    font-size: 64px;
+    font-size: 60px;
 }
-h4{
-    font-size: 48px;
+h3{
+    font-size: 42px;
 }
 p{
     font-weight: normal;
@@ -30,7 +30,7 @@ p{
 .hero{
     background-color: var(--secondary-color);
     text-align: center;
-    padding: 100px 20px;
+    padding: 80px 20px;
     margin: 0;
 }
 .content-container{
@@ -128,27 +128,28 @@ footer .social-link a:hover{
     background-color: var(--branding-color);
 }
 
-@media (max-width:992px) {
+@media (max-width: 992px) {
     .hero{
-        padding: 80px 20px;
+        padding: 60px 20px;
     }
     .project-description{
         padding: 0;
         text-align: center;
     }
     h1{
-        font-size: 48px;
+        font-size: 40px;
         line-height: 56px;
     }
     h2{
-        font-size: 42px;
+        font-size: 36px;
     }
-    h4{
+    h3{
         font-size: 18px;
     }
     .content-container{
         padding: 0;
         text-align: center;
+        margin: 0 auto;
     }
     
 }
